# FlintCLI

./: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  USAGE.md
.github/workflows/: test.yml
example_tests/: basic_placement.json
example_tests/fences/: fence_connects_to_block.json  fence_to_fence.json
example_tests/redstone/: lever_basic.json  redstone_clock.json
example_tests/water/: water_source.json
src/: bot.rs  executor.rs  format.rs  main.rs
src/executor/: actions.rs  block.rs  handlers.rs  mod.rs
src/executor/recorder/: bounding_box.rs  mod.rs  state.rs  tests.rs
