[package]
name = "flintmc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "f464f01" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
futures = "0.3"
flint-core = { git = "https://github.com/FlintTestMC/flint-core", rev = "640d118" }
